# Theatre-Seat-Reservation-System-Rust

./: README.md  UI.html  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
theatre_app/: Cargo.toml
theatre_app/src/: main.rs
