[package]
name = "theatre_app"
version = "0.1.0"
edition = "2024"

[dependencies]
   iced = { version = "0.12", features = ["tokio", "advanced"] }
   serde = { version = "1.0", features = ["derive"] }
   serde_json = "1.0"
   chrono = "0.4"
   uuid = { version = "1.0", features = ["v4", "serde"] }
   tokio = { version = "1", features = ["full"] }